fix: ensure scenario loader upload error list does not overflow

--- a/src/components/Main/ScenarioLoader/ScenarioLoader.scss
+++ b/src/components/Main/ScenarioLoader/ScenarioLoader.scss
@@ -45,9 +45,9 @@ $md: map.get($grid-breakpoints, 'md');
 }
 
 .scenario-loader-list-container {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
   flex-direction: column;
 }
 
@@ -62,9 +62,10 @@ $md: map.get($grid-breakpoints, 'md');
 }
 
 .scenario-loader-list {
+  overflow: scroll;
+  overflow: overlay;
   flex-direction: column;
-  overflow: scroll; /* other browsers */
-  overflow: overlay; /* Chrome */
+  border: 1px $gray-400 solid;
 }
 
 .scenario-loader-list-item {
@@ -77,16 +78,31 @@ $md: map.get($grid-breakpoints, 'md');
   }
 }
 
-.scenario-loader-uploader-error-list-container {
+.scenario-loader-uploader-container {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
   flex-direction: column;
 }
 
+.scenario-loader-uploader-dropzone-container,
 .scenario-loader-uploader-error-list {
-  height: 100%;
-  overflow-y: scroll;
+  display: flex;
+  flex-grow: 1;
+}
+
+.scenario-loader-uploader-dropzone-container {
+  flex-shrink: 0;
+}
+
+.scenario-loader-uploader-error-list {
+  overflow: scroll;
+  overflow: overlay;
+  flex-direction: column;
+}
+
+.scenario-loader-uploader-error-list-item {
+  margin: 0.25em 0;
 }
 
 .preset-loader-button {
